Bug 422412 - Recent documents on the welcome page do not open
Summary: Recent documents on the welcome page do not open
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Android Android 10.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 423278 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-03 10:48 UTC by Anna Medonosova
Modified: 2020-09-21 17:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Medonosova 2020-06-03 10:48:14 UTC
SUMMARY
In my current build from the krita/4.3 branch (4e18814), when I select one of the recent documents on the welcome page, either with touch tap, or stylus tap, nothing happens, the document does not open. In my previous builds this worked.

STEPS TO REPRODUCE
1.  Tap a document in the Recent list on the Welcome page

OBSERVED RESULT
The document does not open.

EXPECTED RESULT
The document opens.
Comment 1 wolthera 2020-06-03 10:53:40 UTC
Yes, can confirm
Comment 2 sh_zam 2020-06-03 11:39:27 UTC
Git commit e9309884ef9ba65d6b36fdf677a139c2b75c33b3 by Sharaf Zaman.
Committed on 03/06/2020 at 11:34.
Pushed by szaman into branch 'krita/4.3'.

Bugfix: Recent documents don't open

QFile _does_ understand URI's with "content://" as scheme,
but not the ones with "file://".

M  +1    -1    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/commit/e9309884ef9ba65d6b36fdf677a139c2b75c33b3
Comment 3 sh_zam 2020-06-20 17:44:32 UTC
*** Bug 423278 has been marked as a duplicate of this bug. ***
Comment 4 sh_zam 2020-09-21 17:14:16 UTC
Git commit 06a3ffd9d5b384feb6e9c34057be5a172d3a4dc1 by Sharaf Zaman.
Committed on 21/09/2020 at 17:03.
Pushed by szaman into branch 'master'.

Bugfix: Recent documents don't open

QFile _does_ understand URI's with "content://" as scheme,
but not the ones with "file://".

M  +1    -1    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/commit/06a3ffd9d5b384feb6e9c34057be5a172d3a4dc1