Bugfix: Recent documents don't open

QFile _does_ understand URI's with "content://" as scheme,
but not the ones with "file://".

BUG:422412